# rivicq-protocol

./: Dockerfile  Dockerfile.enterprise  INFRASTRUCTURE_README.md  README.md  build.sh  docker-compose.yml
.github/: SECRETS.md  environments.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
crosschain-hub/: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
crosschain-hub/config/: oss.json
crosschain-hub/config/enterprise/: enterprise.json
crosschain-hub/evm/: hardhat.config.js  package.json
crosschain-hub/evm/contracts/: MockERC20.sol
crosschain-hub/evm/contracts/ethereum/: CrossChainBridge.sol  EIDASCompliance.sol
crosschain-hub/evm/contracts/polygon/: PolygonBridge.sol
crosschain-hub/evm/test/: bridge.test.js
crosschain-hub/offchain/: package.json
crosschain-hub/offchain/src/: chainservice.ts  compliance.ts  relayer.ts
crosschain-hub/offchain/src/__tests__/: services.test.ts  zkproof.test.ts
crosschain-hub/src/: arcium.rs  bridge.rs  eidas.rs  lib.rs  tests.rs  wallet.rs
crosschain-hub/ui/: next.config.js  package.json  tailwind.config.ts
crosschain-hub/ui/src/app/: layout.tsx  page.tsx  providers.tsx
crosschain-hub/ui/src/lib/: ARCHITECTURE.md  PITCH.md  README.md  rivicq-enterprise.ts  rivicq-oss.ts  rivicq-security.ts  rivicq.ts  store.ts  zkproof.ts
crosschain-hub/ui/src/styles/: globals.css
helm/crosschain-hub/: Chart.yaml  values.enterprise.yaml  values.yaml
helm/crosschain-hub/templates/: _helpers.tpl  deployment.yaml
terraform/: main.tf
terraform/modules/vpc/: variables.tf
