[package]
name = "crosschain_hub"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
solana-sdk = "=2.2.0"
solana-program = "=2.2.0"
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
