[package]
name = "crosschain_hub"
version = "2.0.0"
edition = "2021"
description = "RivicQ Crosschain Hub - Solana-based cross-chain protocol with eIDAS compliance"

[features]
default = []
oss = []
enterprise = ["dep:ring", "dep:rustls"]

[dependencies]
solana-sdk = "=2.2.0"
solana-program = "=2.2.0"
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"

# Enterprise dependencies (optional)
ring = { version = "0.17", optional = true }
rustls = { version = "0.22", optional = true }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.enterprise]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
